# HealthcareUseCase

./: .dockerignore  .env.example  .gitignore  Dockerfile  INSTRUCTIONS.md  README.md  pyproject.toml  pytest.ini
data/: labeling_protocol.md
data/eval/: auto_labeled.jsonl  handcrafted.jsonl  labeled.jsonl  labeling_results.jsonl  review_adjudicated.jsonl  review_queue.jsonl
data/eval/fixtures/: seed.jsonl  (+1 more)
data/kb/: dermatology_faq.txt
docs/: eval_dataset_methodology.md  eval_decisions.md  project_overview.md
eval/: README.md  api_client.py  api_smoke.py  dataset.py  metrics.py  report.py  run.py  runner.py  schemas.py
eval/data/: build_dataset.py  candidate_io.py  derm_filter.py  harvest_chatdoctor.py  hf_rows.py  label_candidates.py  labeling_prompts.py
service/: __init__.py  dependencies.py  main.py  models.py  pipeline.py  pipeline_factory.py  settings.py
service/kb/: build.py  chunker.py  embeddings.py  retriever.py
service/llm/: __init__.py  config.py  protocol.py  registry.py  structured.py
service/steps/: __init__.py  abstraction.py  classifier.py  drafter.py  extractor.py  judge.py  llm_classifier.py  llm_drafter.py  llm_extractor.py  llm_judge.py  prompts.py
service/store/: __init__.py  base.py  memory.py
tests/: conftest.py  test_api.py  test_build_dataset.py  test_eval_api_smoke.py  test_eval_dataset.py  test_eval_metrics.py  test_eval_runner.py  test_harvest_chatdoctor.py  test_hf_rows.py  test_judge.py  test_kb.py  test_label_candidates.py  test_llm_classifier.py  test_llm_registry.py  test_pipeline.py  test_steps.py  test_store.py
(+11 files in other folders)
