[project]
name = "draft-service"
version = "0.1.0"
description = "FastAPI service for message classification and draft response generation."
readme = "INSTRUCTIONS.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "openai>=1.60.0",
    "python-dotenv>=1.0.0",
    "faiss-cpu>=1.9.0",
    "numpy>=1.26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "scikit-learn>=1.5.0",
    "datasets>=3.0.0",
]

[tool.uv]
package = false
